# chess_ar

./: .gitignore  CMakeLists.txt  README.md
chess_Figures/: bishop.blend  bishop.blend1  bishop.fbx  knight.fbx  pawn.blend  pawn2.blend  pawn2.blend1  queen.blend  queen.blend1  queen2.blend  queen2.blend1  rook.blend  rook.blend1
chess_Figures/final/: bishop.blend  bishop.blend1  knight.3ds  knight.fbx  pawn.blend  queen2.blend
chess_Figures/pictures/: icons.ai  icons.psd
chess_Figures/pictures/bishop/: bishop.ai
chess_Figures/pictures/king/: king.ai
chess_Figures/pictures/knight/: knight.ai
chess_Figures/pictures/pawn/: pawn.ai
chess_Figures/pictures/queen/: queen.ai
chess_Figures/pictures/rook/: rook.ai
cmake/modules/: FindRabbitMQ.cmake  FindRabbitmqc.cmake
config/: eye.ini  logitech_c920.yml  logitech_c920_old.yml
doxygen/: Doxyfile
doxygen/html/: _chess_board_8cpp.html  _chess_board_8cpp__incl.map  _chess_board_8cpp__incl.md5  _chess_board_8h.html  _chess_board_8h__dep__incl.map  _chess_board_8h__dep__incl.md5  _chess_board_8h__incl.map  _chess_board_8h__incl.md5  _chess_board_8h_source.html  _chess_color_8h.html  _chess_color_8h__dep__incl.map  _chess_color_8h__dep__incl.md5  _chess_color_8h_source.html  _chess_engine_communicator_8cpp.html  _chess_engine_communicator_8cpp__incl.map  _chess_engine_communicator_8cpp__incl.md5  _chess_engine_communicator_8h.html  _chess_engine_communicator_8h__dep__incl.map  _chess_engine_communicator_8h__dep__incl.md5  _chess_engine_communicator_8h__incl.map  _chess_engine_communicator_8h__incl.md5  _chess_engine_communicator_8h_source.html  _chess_figure_8h.html  _chess_figure_8h__dep__incl.map  _chess_figure_8h__dep__incl.md5  _chess_figure_8h__incl.map  _chess_figure_8h__incl.md5  _chess_figure_8h_source.html  _eye_utils_8h.html  _eye_utils_8h__dep__incl.map  _eye_utils_8h__dep__incl.md5  _eye_utils_8h__incl.map  _eye_utils_8h__incl.md5  _eye_utils_8h_source.html  _fourier_descriptor_8h.html  _fourier_descriptor_8h__dep__incl.map  _fourier_descriptor_8h__dep__incl.md5  _fourier_descriptor_8h__incl.map  _fourier_descriptor_8h__incl.md5  _fourier_descriptor_8h_a52b31b08813451d0beac92209510fe92_icgraph.map  (+226 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_1.js  functions_2.js  functions_3.js  (+28 more)
src/artoolkit/unity_gui/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
src/artoolkit/unity_gui/Assets/: main.unity
src/artoolkit/unity_gui/Assets/Animation/: FigureIdle.anim  FigureUp.anim  GuiScreen.controller  HideError.anim  PlayerInfoIn.anim  VerticalContainerWaiting.controller
src/artoolkit/unity_gui/Assets/Materials/: DepthMask.mat  DepthMask.shader  FigureStanndard.shader  Transparent.mat  blackMaterial.mat  materialWhite.mat  test.mat
src/artoolkit/unity_gui/Assets/Scripts/: ChessBoard.cs  Figure.cs  GuiManager.cs  Receiver.cs  (+3 more)
src/artoolkit/unity_gui/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset
src/artoolkit/unity_gui/QCAR/: somedata16
src/artoolkit/unity_gui/UWP/: project.lock.json
src/chess_engine/: CMakeLists.txt  ChessEngineCommunicator.cpp  ChessEngineCommunicator.h  main.cpp
src/controller/: CMakeLists.txt  ChessEngineCommunicator.cpp  ChessEngineCommunicator.h  ChessEngneCommunicator.cpp  ChessEngneCommunicator.h  main.cpp
src/eye/: CMakeLists.txt  EyeUtils.h  FourierDescriptor.h  MatchDescriptor.cpp  MatchDescriptor.h  TestOpenCV.cpp  cvmat_serialization.h  main.cpp  train.cpp
src/gui/: CMakeLists.txt  main.cpp
src/lib/: ChessBoard.h  ChessFigure.h
src/rabbitmq_test/: CMakeLists.txt  main.cpp
src/shared_lib/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessColor.h  ChessFigure.h  Zobrist.cpp  Zobrist.h
src/shared_lib/rabbitmq/: RabbitMQBase.cpp  RabbitMQBase.h  RabbitMQReceiver.cpp  RabbitMQReceiver.h  RabbitMQSender.cpp  RabbitMQSender.h
src/unity_gui/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  unity_gui.sln
src/unity_gui/Assets/: main.unity
src/unity_gui/Assets/Animation/: ErrorPanel.controller  Figure.controller  FigureDown.anim  GuiScreen.controller  GuiScreenIdle.anim  ShowError.anim  Start.anim  StaticPanelIn.anim  Waiting.anim
src/unity_gui/Assets/Cube/: gradient.mat
src/unity_gui/Assets/Materials/: DepthMask.mat  DepthMaskFigure.mat  Opacity.mat  gradient.mat  gradient_bottom.mat  gradient_bottom_strike.mat  whiteMaterial.mat
src/unity_gui/Assets/Resources/: VuforiaConfiguration.asset
src/unity_gui/Assets/Scripts/: ChessBoard.cs  Figure.cs  GuiManager.cs  JumpAnimator.cs  PathGenerator.cs  Publisher.cs  Receiver.cs
src/unity_gui/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
train/chessBoard/: eye.ini
(+38 files in other folders)
